@@ -1,6 +1,7 @@
 THE FUTURE 2.4.0
 - EVOL: simple "if statement" !
 - remove old shebang system
+- FIX: jpath can now resolve python methods too !!! (in a good way)
 - selfconf in preparation
 
 2.3.10 (3/4/20)
